# CI-Homework_3

./: .gitignore  CMakeLists.txt  README.md
Problem 1/: Problem_1.c  testOutput21C.txt
Problem 2/: Problem_2.c  testOutput22A.txt  testOutput22B.txt
Problem 3/: Problem_3.c
